# ProjetoPds

./: .gitignore  main.py  pyproject.toml  setup_and_run.ps1
app/: requirements.txt  router.py
app/controllers/: __init__.py  audio_file_controller.py  image_media_file_controller.py  media_file_controller.py  user_controller.py  video_controller.py  video_media_file_controller.py
app/dependencies/: auth_guard.py
app/exceptions/: __init__.py  media_type_not_supported_exception.py  unable_to_create_pipeline_exception.py  unable_to_save_file_exception.py
app/extractors/: __init__.py  image_color_extractor.py  image_data_extractor.py  image_face_extractor.py  image_metadata_extractor.py  image_object_extractor.py  image_scene_extractor.py  media_extraction_strategy.py  media_metadata_extractor.py  video_data_extractor.py  video_metadata_extractor.py
app/helpers/: auth_token.py
app/middlewares/: exception_handler.py
app/models/: __init__.py  media_file_model.py  pipeline_run_model.py  pipeline_step_model.py  post_media_model.py  post_model.py  user_model.py
app/repositories/: __init__.py  media_file_repository.py  pipeline_run_repository.py  pipeline_step_repository.py  post_repository.py  repository.py  user_repository.py
app/schemas/: __init__.py  auth_schema.py  media_file_schema.py  pipeline_run_schema.py  pipeline_step_schema.py  post_schema.py  user_schema.py
app/services/: __init__.py  audio_file_service.py  blur_image_step_service.py  edge_detect_image_step_service.py  grayscale_image_step_service.py  image_media_file_service.py  invert_color_image_step_service.py  media_file_service.py  media_service.py  (+6 more)
(+11 files in other folders)
