[project]
name = "projetopds"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "sqlalchemy>=2.0.40",
    "uvicorn>=0.34.2",
    "psycopg2>=2.9.10",
    "pydantic[email]>=2.11.3",
    "pydantic-settings>=2.9.1",
    "pwdlib[argon2]>=0.2.1",
    "pyjwt>=2.10.1",
    "tzdata>=2025.2",
    "gitpython>=3.1.44",
    "python-multipart>=0.0.20",
    "wxpython==4.2.2",
    "huggingface-hub>=0.23.0",
    "torch>=2.0.1",
    "torchaudio>=2.7.1",
    "numpy>=1.23",
    "pandas>=2.3.1",
    "scipy>=1.9.3",
    "soundfile>=0.10.2",
    "ml-collections>=1.1.0",
    "tqdm>=4.48.0",
    "segmentation-models-pytorch==0.3.3",
    "timm==0.9.2",
    "audiomentations>=0.32.0",
    "pedalboard~=0.8.1",
    "omegaconf==2.2.3",
    "beartype==0.14.1",
    "rotary-embedding-torch==0.3.5",
    "einops==0.8.1",
    "librosa==0.10.2",
    "numba>=0.59.0",
    "matplotlib>=3.3",
    "audioread>=2.1.9",
    "joblib>=0.14",
    "pooch>=1.0",
    "packaging>=20.0",
    "demucs==4.0.0",
    "transformers~=4.35.0",
    "torchmetrics==0.11.4",
    "spafe==0.3.2",
    "protobuf==3.20.3",
    "torch-audiomentations>=0.12.0",
    "asteroid==0.7.0",
    "auraloss>=0.4.0",
    "torchseg>=0.0.1a1",
    "bitsandbytes>=0.46.1",
    "wandb>=0.21.0",
    "accelerate>=1.9.0",
    "prodigyopt>=1.1.2",
    "torch-log-wmse>=0.3.0",
    "loralib>=0.1.2",
    "pyaudio>=0.2.14",
    "keyboard>=0.13.5",
    "hyper-connections==0.1.11",
    "sageattention==1.0.6",
]
